--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,6 @@
   text-decoration: none;
   outline: none;
   border: none;
-  text-transform: capitalize;
   transition: all .2s linear;
 }
 
@@ -42,4 +41,24 @@ body {
   position: relative;
   overflow: hidden;
   z-index: 0;
+}
+
+/* Responsive */
+/* Tablet + Mobile */
+@media (max-width: 1023px) {
+  
+}
+
+/* Tabet */
+@media (min-width: 739px) and (max-width: 1023px) {
+  html {
+    font-size: 55%;
+  }
+}
+
+/* Mobile */
+@media (max-width: 739px) {
+  html {
+    font-size: 50%;
+  }
 }
