--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,7 +1,9 @@
 .header {
     position: fixed;
-    top: 0; left: 0; right: 0;
-    background: var(--white);
+    top: 0;
+    left: 0;
+    right: 0;
+    background: var(--black);
     padding: 1rem 6%;
     z-index: 100;
     box-shadow: var(--box-shadow);
@@ -14,10 +16,11 @@
 }
 
 .header__logo {
-    color: var(--text-color);
-    font-size: 2rem;
+    color: var(--white);
+    font-size: 2.5rem;
     font-weight: 600;
     margin-right: 10rem;
+    user-select: none;
 }
 
 .header__logo i {
@@ -29,19 +32,14 @@
     display: flex;
     align-items: center;
     column-gap: 1rem;
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-weight: 400;
-}
-
-.header__navbar .navbar__close {
-    display: none;
-    color: var(--white);
 }
 
 .navbar__link {
     border-radius: 1rem;
-    padding: .5rem 1.5rem;
-    color: var(--text-color);
+    padding: 1rem 2rem;
+    color: var(--white);
 }
 
 .navbar__link:hover {
@@ -49,76 +47,194 @@
     color: var(--white);
 }
 
-.header__icon {
+.header__icons {
     display: flex;
-    font-size: 1.5rem;
+    font-size: 2rem;
     column-gap: 1rem;
-    color: var(--back);
+    color: var(--white);
 }
 
-.header__icon i {
+.header__icons i {
+    position: relative;
     cursor: pointer;
-    width: 3.5rem;
-    height: 3.5rem;
-    line-height: 3.5rem;
+    width: 4rem;
+    height: 4rem;
+    line-height: 4rem;
     text-align: center;
     border-radius: 50%;
-    background: #eee;
 }
 
-.header__icon i:hover {
+.header__icons i:hover {
     color: var(--white);
     background: var(--yellow);
 }
 
-.header__icon .icon__bars {
+.header__icons .bars__icon {
     display: none;
+}
+
+/* Open Navbar (Mobile) */
+.header__navbar .navbar__close {
+    display: none;
+    font-size: 2.5rem;
+    color: var(--white);
+    width: 4rem;
+    height: 4rem;
+    line-height: 4rem;
+    text-align: center;
+    margin: 0 2rem .5rem auto;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.header__navbar .navbar__close:hover {
+    background: var(--yellow);
+}
+
+/* Cart */
+.cart__container {
+    position: absolute;
+    top: 50vh;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    background: var(--white);
+    width: 60%;
+    height: 80vh;
+    padding: 2rem;
+    border: .1rem solid rgba(0, 0, 0, 0.2);
+    border-radius: 1rem;
+    box-shadow: var(--box-shadow);
+}
+
+.cart__heading {
+    font-size: 2.5rem;
+    color: var(--text-color);
+}
+
+.cart__heading span {
+    color: var(--yellow);
+}
+
+.cart__list {
+    list-style: none;
+}
+
+.cart__item {
+    display: flex;
+    width: 100%;
+}
+
+.item__img {
+
+}
+
+.item__name {
+
+}
+
+.item__price {
+
+}
+
+/* User */
+.user__container {
+    position: absolute;
+    width: 50rem;
+    max-width: 30rem;
+    height: 100vh;
+    top: 0;
+    right: -100%;
+    background: var(--black);
+    font-weight: 400;
+    color: var(--white);
+    display: flex;
+    flex-direction: column;
+    padding-top: 1.5rem;
+    align-items: start;
+    border-left: .1rem solid rgba(0, 0, 0, 0.2);
+    border-bottom: .1rem solid rgba(0, 0, 0, 0.2);
+    box-shadow: var(--box-shadow);
+}
+
+.user__container.open {
+    right: 0;
+}
+
+.user__container .user__close {
+    font-size: 2.5rem;
+    width: 4rem;
+    height: 4rem;
+    line-height: 4rem;
+    text-align: center;
+    margin: 0 2rem .5rem auto;
+    border-radius: 50%;
+}
+
+.user__link {
+    width: 100%;
+    font-size: 2rem;
+    padding: 1rem 2rem;
+}
+
+.user__link:last-child {
+    color: #ff2400;
+}
+
+.user__link:last-child:hover {
+    color: #ff2400;
+}
+
+.user__close:hover, .user__link:hover {
+    background: var(--yellow);
+    color: var(--white);
+    cursor: pointer;
 }
 
 /* Responsive */
 /* Tablet + Mobile */
 @media (max-width: 1023px) {
-
+    .header {
+        padding: 1rem 2%;
+    }
 }
 
 /* Tabet */
-@media (min-width: 739px) and (max-width: 1023px) {
-
-}
+@media (min-width: 739px) and (max-width: 1023px) {}
 
 /* Mobile */
 @media (max-width: 739px) {
-    html {
-        font-size: 50%;
-    }
-    .header__icon .icon__bars {
+    .header__icons .bars__icon {
         display: block;
     }
+
     .header__navbar {
         position: absolute;
         background: var(--black);
-        width: 60%;
+        width: 30rem;
         height: 100vh;
         top: 0;
         right: -100%;
         flex-direction: column;
         align-items: start;
-        /* row-gap: 2rem; */
-        padding: 1rem 0;
-        border-left: .1rem solid rgba(0, 0, 0, 0.1);
-        border-bottom: .1rem solid rgba(0, 0, 0, 0.1);
+        padding-top: 1.5rem;
+        border-left: .1rem solid rgba(0, 0, 0, 0.2);
+        border-bottom: .1rem solid rgba(0, 0, 0, 0.2);
         box-shadow: var(--box-shadow);
+        z-index: 1;
     }
+
     .header__navbar.open {
         right: 0;
     }
+
     .header__navbar .navbar__close {
-        font-size: 2rem;
-        cursor: pointer;
-        padding: 1rem;
-        margin: 0 2rem 0 auto;
         display: block;
     }
+
     .navbar__link {
         display: block;
         width: 100%;
