--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,43 @@ body {
   text-rendering: optimizespeed;
 }
 
+section {
+  padding: 1rem 6%;
+}
+
 .btn {
+  display: inline-block;
+  padding: 0.8rem 3rem;
+  border: .2rem solid var(--yellow);
+  color: var(--yellow);
+  cursor: pointer;
+  font-size: 1.7rem;
+  border-radius: .5rem;
+  position: relative;
+  overflow: hidden;
+  z-index: 0;
+}
+
+.btn:hover {
+  color: #fff;
+}
+
+.btn::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 0%;
+  height: 100%;
+  background: var(--yellow);
+  transition: .3s linear;
+  z-index: -1;
+}
+
+.btn:hover::before {
+  width: 100%;
+  left: 0;
+}.btn {
   display: inline-block;
   padding: 0.8rem 3rem;
   border: .2rem solid var(--yellow);
@@ -46,19 +82,21 @@ body {
 /* Responsive */
 /* Tablet + Mobile */
 @media (max-width: 1023px) {
-  
+  section {
+    padding: 1rem 3%;
+  }
 }
 
 /* Tabet */
 @media (min-width: 739px) and (max-width: 1023px) {
   html {
-    font-size: 55%;
+    font-size: 58%;
   }
 }
 
 /* Mobile */
 @media (max-width: 739px) {
   html {
-    font-size: 50%;
+    font-size: 55%;
   }
 }
