--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,13 +1,11 @@
 .home {
-    margin-top: 6.5rem;
-    padding: 2rem 6%;
+    padding-top: 8.5rem;
     display: flex;
     column-gap: 1rem;
 }
 
 .home__content {
     width: 50%;
-    /* padding: 0rem 8rem; */
 }
 
 .content__heading {
@@ -20,7 +18,7 @@
 }
 
 .content__describtion {
-    padding-top: 1rem;
+    padding-top: 2rem;
     font-size: 2rem;
     color: var(--text-color);
 }
@@ -28,17 +26,28 @@
 .content__pros {
     display: flex;
     justify-content: space-between;
-    padding: 1rem 2rem 0;
+    padding-top: 2rem;
 }
 
 .pros__detail {
-    width: 25%;
-    font-size: 5rem;
+    width: 12rem;
+    text-align: center;
 }
 
 .pros__detail p {
-    width: 100%;
-    height: width;
+    background: var(--yellow);
+    font-size: 5rem;
+    color: var(--white);
+    width: 12rem;
+    height: 12rem;
+    line-height: 12rem;
+    border-radius: 50%;
+    margin-bottom: 1rem;
+}
+
+.pros__detail:last-child p {
+    font-size: 4.5rem;
+    font-weight: 600;
 }
 
 .pros__detail span {
@@ -48,5 +57,47 @@
 
 .home__img {
     width: 50%;
-    height: 100%;
+    object-fit: contain;
+    animation: float 4s linear infinite;
+}
+
+@keyframes float {
+    0%,
+    50%,
+    100% {
+        transform: translateY(0);
+    }
+    25% {
+        transform: translateY(2rem);
+    }
+    75% {
+        transform: translateY(-2rem);
+    }
+}
+
+/* Responsive */
+/* Mobile + Tablet */
+@media (max-width: 1023px) {
+
+}
+
+/* Tabet */
+@media (min-width: 739px) and (max-width: 1023px) {
+    
+}
+
+/* Mobile */
+@media (max-width: 739px) {
+    .home {
+        flex-direction: column;
+        row-gap: 2rem;
+        align-items: center;
+    }
+    .home__content {
+        width: 100%;
+    }
+    .home__img {
+        width: 70%;
+        animation: none;
+    }
 }
