--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
 :root {
-  --yellow: #f9d342;
+  --yellow: rgb(249, 211, 66);
   --black: #292826;
   --white: #fff;
   --text-color: #666;
@@ -36,11 +36,11 @@ section {
 
 .btn {
   display: inline-block;
-  padding: 0.8rem 3rem;
+  padding: 1rem 2rem;
   border: .2rem solid var(--yellow);
   color: var(--yellow);
   cursor: pointer;
-  font-size: 1.7rem;
+  font-size: 2rem;
   border-radius: .5rem;
   position: relative;
   overflow: hidden;
@@ -66,17 +66,6 @@ section {
 .btn:hover::before {
   width: 100%;
   left: 0;
-}.btn {
-  display: inline-block;
-  padding: 0.8rem 3rem;
-  border: .2rem solid var(--yellow);
-  color: var(--yellow);
-  cursor: pointer;
-  font-size: 1.7rem;
-  border-radius: .5rem;
-  position: relative;
-  overflow: hidden;
-  z-index: 0;
 }
 
 /* Responsive */
