--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@ section {
   color: var(--yellow);
   cursor: pointer;
   font-size: 2rem;
-  border-radius: .5rem;
+  border-radius: 1rem;
   position: relative;
   overflow: hidden;
   z-index: 0;
