--- a/src/Components/Menu/Menu.css
+++ b/src/Components/Menu/Menu.css
@@ -70,7 +70,7 @@
 
 .item__img {
     width: 100%;
-    height: 15rem;
+    height: 18rem;
     border-radius: 2rem;
     object-fit: cover;
 }
@@ -121,26 +121,69 @@
             "list";
         grid-template-columns: 1fr;
     }
-    .menu__filter {
-        width: 15rem;
-        margin: 0 0 0 auto;
-    }
-    .menu__choice {
-        margin-top: 0;
-        display: none;
-    }
-    .menu__choice.active {
-        transform: none;
-        display: block;
-    }
 }
 
 /* Tabet */
-@media (min-width: 739px) and (max-width: 1023px) {}
+@media (min-width: 739px) and (max-width: 1023px) {
+    .menu__filter {
+        display: flex;
+        gap: 1.5rem;
+    }
+    .menu__choice {
+        margin-top: 0;
+        padding: 1rem 2rem;
+        border-left: none;
+        border-radius: 1rem;
+    }
+    .menu__choice:hover,
+    .menu__choice.active {
+        background: var(--yellow);
+        color: var(--white);
+        transform: none;
+    }
+}
 
 /* Mobile */
 @media (max-width: 739px) {
+    .menu__filter {
+        display: flex;
+        gap: 1.5rem;
+        /* display: none; */
+    }
+    .menu__choice {
+        display: none;
+        width: 15rem;
+        text-align: center;
+        padding: 1rem 0;
+    }
+    /* .menu__filter:hover ~ .menu__choice {
+        display: block;
+    } */
+    .menu__choice:hover {
+        display: block;
+        /* background: #fff; */
+        transform: none;
+    }
+    .menu__choice.active {
+        display: block;
+        margin: 0rem 0rem 0rem auto;
+        transform: none;
+    }
     .menu__list {
         grid-template-columns: repeat(2, 1fr);
+        row-gap: 1.5rem;
+        column-gap: 1.5rem;
+    }
+    .menu__item {
+        padding: 1rem;
+    }
+    .item__img {
+        height: 15rem;
+    }
+    .item__price-btn {
+        padding-top: 1rem;
+    }
+    .item__btn {
+        padding: 1rem 2rem;
     }
 }
