--- a/src/Components/Review/Review.css
+++ b/src/Components/Review/Review.css
@@ -110,7 +110,7 @@
         "img comment comment";
         grid-template-columns: auto 1fr 1fr;
         column-gap: 2rem;
-        /* padding: 1rem; */
+        padding: 1rem;
     }
     .card__img {
         grid-area: img;
