--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   --yellow: rgb(249, 211, 66);
   --black: #292826;
   --white: #fff;
+  --red: #ff2400;
   --text-color: #666;
   --box-shadow: 0 .5rem 1.5rem rgba(0, 0, 0, .1);
 }
