--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -72,6 +72,20 @@
     display: none;
 }
 
+.cart__icon {
+    position: relative;
+}
+
+.cart__icon span {
+    position: absolute;
+    top: 0rem;
+    right: 0rem;
+    font-size: 1.5rem;
+    padding: 0.1rem 0.4rem;
+    background: var(--red);
+    border-radius: 1rem;
+}
+
 /* Open Navbar (Mobile) */
 .header__navbar .navbar__close {
     display: none;
@@ -93,21 +107,21 @@
 /* Cart */
 .cart__container {
     position: absolute;
-    top: 50vh;
+    top: -750%;
     left: 50%;
     transform: translate(-50%, -50%);
-    display: grid;
-    grid-template-areas: 
-    "heading heading"
-    "list list"
-    "total total"
-    "close order";
+    display: flex;
+    flex-direction: column;
     background: var(--white);
-    width: 60%;
     padding: 2rem;
     border: .1rem solid rgba(0, 0, 0, 0.2);
     border-radius: 2rem;
     box-shadow: var(--box-shadow);
+    transition: .8s;
+}
+
+.cart__container.open {
+    top: 50vh;
 }
 
 .cart__heading {
@@ -115,6 +129,8 @@
     font-size: 4rem;
     color: var(--text-color);
     text-align: center;
+    padding-bottom: 1rem;
+    border-bottom: .2rem solid var(--yellow);
 }
 
 .cart__heading span {
@@ -122,48 +138,64 @@
 }
 
 .cart__list {
-    grid-area: list;
     height: 40rem;
     list-style: none;
-    padding-top: 1rem;
+    margin-bottom: 1rem;
+    padding: 0rem 1rem;
+    overflow-y: scroll;
 }
 
 .cart__item {
-    display: grid;
-    grid-template-areas: 
-    "img name name name delete"
-    "img price quantity total delete";
-    grid-template-columns: 20rem 1fr 1fr 1fr auto;
+    display: flex;
+    align-items: center;
     border-radius: 2rem;
     border: .1rem solid rgba(0, 0, 0, .1);
-    box-shadow: var(--box-shadow);
-    margin-top: 1rem;
+    box-shadow: 0rem 0.3rem 1rem rgba(0, 0, 0, .1);
+    margin-top: 1.5rem;
+    overflow: hidden;
 }
 
 .cart__item .item__img {
-    grid-area: img;
-    height: 8rem;
+    height: 8.2rem;
+    width: 10rem;
+    object-fit: cover;
+    border-radius: 0;
 }
 
-.cart__item .item__name {
-    grid-area: name;
+.item__info {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.item__info .item__name {
     padding: 1rem 1rem 0;
 }
 
-.cart__item .item__price {
-    grid-area: price;
-    /* font-size: 10rem; */
+.item__info .item__detail {
+    display: grid;
+    grid-template-columns: 2fr 3fr 2fr;
+    column-gap: 2rem;
+    padding: 1rem;
 }
 
 .item__quantity {
-    grid-area: quantity;
     font-size: 1.5rem;
     color: var(--text-color);
-    text-align: right;
+    display: flex;
+    align-items: center;
+}
+
+.item__quantity i {
+    padding: .5rem;
+    margin: 0 1rem;
+    color: var(--white);
+    background: var(--yellow);
+    border-radius: .5rem;
+    cursor: pointer;
 }
 
 .item__total {
-    grid-area: total;
     font-size: 2.5rem;
     font-weight: 600;
     color: var(--yellow);
@@ -171,22 +203,37 @@
 }
 
 .cart__item .item__delete {
-    grid-area: delete;
     font-size: 2.5rem;
-    margin: auto 1rem;
+    color: var(--text-color);
+    padding: 0 2rem;
+}
+
+.cart__item .item__delete:hover {
+    color: var(--red);
+    cursor: pointer;
 }
 
 .cart__total {
-    grid-area: total;
+    font-size: 2.5rem;
+    font-weight: 600;
+    color: var(--yellow);
+    padding: 2rem 10rem 4rem 0;
+    border-top: .2rem solid var(--yellow);
     text-align: right;
 }
 
-.cart__close {
-    grid-area: close;
+.cart__btn {
+    display: flex;
+    justify-content: space-around;
 }
 
-.cart__order {
-    grid-area: order;
+.btn__close {
+    border: .2rem solid var(--red);
+    color: var(--red);
+}
+
+.btn__close.btn::before {
+    background: var(--red);
 }
 
 /* User */
@@ -241,11 +288,11 @@
 }
 
 .user__link:last-child {
-    color: #ff2400;
+    color: var(--red);
 }
 
 .user__link:last-child:hover {
-    color: #ff2400;
+    color: var(--red);
 }
 
 .user__close:hover,
@@ -261,7 +308,6 @@
     .header__icons .bars__icon {
         display: block;
     }
-
     .header__navbar {
         position: absolute;
         background: var(--black);
@@ -277,15 +323,12 @@
         box-shadow: var(--box-shadow);
         z-index: 1;
     }
-
     .header__navbar.open {
         right: 0;
     }
-
     .header__navbar .navbar__close {
         display: block;
     }
-
     .navbar__link {
         display: block;
         width: 100%;
@@ -299,4 +342,15 @@
 @media (min-width: 739px) and (max-width: 1023px) {}
 
 /* Mobile */
-@media (max-width: 739px) {}
+@media (max-width: 739px) {
+    .cart__container {
+        border-radius: 0;
+        height: 100vh;
+    }
+    .cart__list {
+        height: 50rem;
+    }
+    .item__info .item__detail {
+        column-gap: 1rem;
+    }
+}
